--- a/src/components/HelpfulResources.css
+++ b/src/components/HelpfulResources.css
@@ -1,5 +1,5 @@
 .helpful-resources-page {
-  padding-top: 6rem;
+  padding-top: 12rem;
   background-color: #ffffff;
   min-height: 100vh;
 }
