--- a/src/components/PrivacyPolicy.css
+++ b/src/components/PrivacyPolicy.css
@@ -7,7 +7,7 @@
 .privacy-container {
   max-width: 800px;
   margin: 0 auto;
-  padding-top: 4rem;
+  padding-top: 12rem;
 }
 
 .privacy-policy-page h1 {
@@ -55,7 +55,7 @@
   }
   
   .privacy-container {
-    padding-top: 3rem;
+    padding-top: 5rem;
   }
   
   .privacy-policy-page h1 {
